@@ -13,6 +13,8 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.file.FileVisitResult;
@@ -82,7 +84,7 @@ public class HttpHarvesterImpl implements HttpHarvester {
     final Path downloadedFile;
     try {
       downloadedFile = downloadFile(archiveUrl, downloadDirectoryPath);
-    } catch (IOException e) {
+    } catch (IOException | URISyntaxException e) {
       throw new HarvesterException("Problem downloading archive " + archiveUrl + ".", e);
     }
 
@@ -128,8 +130,8 @@ public class HttpHarvesterImpl implements HttpHarvester {
     return new FileIterator(extractedDirectory);
   }
 
-  private Path downloadFile(String archiveUrlString, Path downloadDirectory) throws IOException {
-    final URL archiveUrl = new URL(archiveUrlString);
+  private Path downloadFile(String archiveUrlString, Path downloadDirectory) throws IOException, URISyntaxException {
+    final URL archiveUrl = new URI(archiveUrlString).toURL();
     if (!SUPPORTED_PROTOCOLS.contains(archiveUrl.getProtocol())) {
       throw new IOException("This functionality does not support this protocol ("
           + archiveUrl.getProtocol() + ").");
